--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "tsc client.ts && jest",
     "compile": "tsc client.ts && node client.js"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   }
